@@ -127,6 +127,7 @@ production.
 * (bug 32022) Our phpunit.php script can now be executed from another directory
 * (bug 26020) Setting $wgEmailConfirmToEdit to true no longer removes diffs
   from recent changes feeds
+* (bug 30232) add current time to message wlnote on Special:Watchlist
 
 === API changes in 1.19 ===
 * (bug 19838) siprop=interwikimap can now use the interwiki cache.
